Right side fixed for smartphone, overflow hidden for links

--- a/style.css
+++ b/style.css
@@ -122,6 +122,8 @@ html {
 
 button:hover{
   cursor: pointer;
+  transform: scale(1.2);
+  transition: linear;
 }
 
 .socials {
@@ -329,6 +331,17 @@ input[type="range"] {
 }
 
 @media only screen and (max-width: 600px) {
+
+  .right-side {
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 42%;
+  }
+  .left-side {
+    margin-right: 2rem;
+  }
+
   .right-side ul {
     padding-left: .6rem;
   }
@@ -425,13 +438,15 @@ input[type="range"] {
   }
 
   .avatar {
-    width: 40%;
+    width: 50%;
     border-radius: 100%;
     height: 80px;
+    margin-top: 1rem;
+    object-fit: cover;
   }
 
   a {
-    overflow: auto;
+    overflow: hidden;
   }
   .socials {
     margin-right: .7rem;
